# gauth_extractor

./: makefile  pyproject.toml  requirements.txt
src/: cli.py  extractor.py  qrreader.py
src/protobuff/: gauth.proto  gauth_pb2.py
